--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu
 RUN export DEBIAN_FRONTEND=noninteractive
-RUN apt-get install -y tzdata && ln -fs /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime
+RUN apt-get install -y tzdata
+RUN ln -fs /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime
 RUN dpkg-reconfigure --frontend noninteractive tzdata
 RUN apt-get update && apt-get install -y apache2 && apt-get -y clean
 ADD frontend.tar.gz /var/www/html/
